<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp"
    android:scaleType="centerCrop"
    tools:context=".MenuRegionSelectionActivity">

    <Button
        android:id="@+id/buttonEuropa"
        android:layout_width="218dp"
        android:layout_height="87dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/bungee_regular"
        android:paddingBottom="9dp"
        android:text="@string/europa"
        android:textColor="#6F5D47"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAsia"
        android:layout_width="218dp"
        android:layout_height="87dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/bungee_regular"
        android:paddingBottom="9dp"
        android:text="@string/asia"
        android:textColor="#6F5D47"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEuropa" />

    <Button
        android:id="@+id/buttonAmerica"
        android:layout_width="218dp"
        android:layout_height="87dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/bungee_regular"
        android:paddingBottom="9dp"
        android:text="@string/america"
        android:textColor="#6F5D47"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAsia" />

    <Button
        android:id="@+id/buttonAfrica"
        android:layout_width="218dp"
        android:layout_height="87dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/bungee_regular"
        android:paddingBottom="9dp"
        android:text="@string/africa"
        android:textColor="#6F5D47"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAmerica" />

    <Button
        android:id="@+id/buttonOceania"
        android:layout_width="218dp"
        android:layout_height="87dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/bungee_regular"
        android:paddingBottom="9dp"
        android:text="@string/oceania"
        android:textColor="#6F5D47"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAfrica" />

    <ImageButton
        android:id="@+id/imageButtonVolumen"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_square_background"
        android:contentDescription="@string/botonvolumen"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconovolumenencendido" />

    <ImageButton
        android:id="@+id/imageButtonVolver"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_square_background"
        android:contentDescription="@string/botonvolver"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButtonSeleccionCantidad"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_square_background"
        android:contentDescription="@string/botonCantidad"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonVolumen"
        app:layout_constraintStart_toEndOf="@+id/imageButtonVolver"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/infinito"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>