<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp"
    android:scaleType="centerCrop"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonBanderas"
        android:layout_width="191dp"
        android:layout_height="100dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="#FFB4A2"
        android:text="@string/banderas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCapitales"
        android:layout_width="191dp"
        android:layout_height="100dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFB4A2"
        android:text="@string/capitales"
        app:layout_constraintBottom_toTopOf="@+id/buttonBanderas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPaises"
        android:layout_width="191dp"
        android:layout_height="100dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFB4A2"
        android:text="@string/paises"
        app:layout_constraintBottom_toTopOf="@+id/buttonCapitales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonVolumen"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/botonvolumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconovolumenencendido" />

    <ImageButton
        android:id="@+id/imageButtonMenu"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/botonmenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menulineas"
        tools:ignore="DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>