<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp"
    android:scaleType="centerCrop"
    tools:context=".ProfileMenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/buttonPerfil"
                android:layout_width="217dp"
                android:layout_height="87dp"
                android:layout_marginStart="97dp"
                android:layout_marginEnd="97dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/bungee_regular"
                android:paddingBottom="9dp"
                android:text="@string/perfil"
                android:textColor="#6F5D47"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonCerrarSesion"
                android:layout_width="217dp"
                android:layout_height="87dp"
                android:layout_marginStart="97dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="97dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/bungee_regular"
                android:paddingBottom="9dp"
                android:text="@string/cerrar_sesion"
                android:textColor="#6F5D47"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonPerfil" />

            <Button
                android:id="@+id/buttonFondo"
                android:layout_width="217dp"
                android:layout_height="87dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/bungee_regular"
                android:paddingBottom="9dp"
                android:text="@string/cambiar_fondo"
                android:textColor="#6F5D47"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCerrarSesion" />

            <Button
                android:id="@+id/buttonIdioma"
                android:layout_width="217dp"
                android:layout_height="87dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/bungee_regular"
                android:paddingBottom="9dp"
                android:text="@string/idioma"
                android:textColor="#6F5D47"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonFondo" />

            <Button
                android:id="@+id/buttonHistorial"
                android:layout_width="217dp"
                android:layout_height="87dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/bungee_regular"
                android:paddingBottom="9dp"
                android:text="@string/descargar_datos"
                android:textColor="#6F5D47"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonIdioma" />

            <Button
                android:id="@+id/buttonCreditos"
                android:layout_width="217dp"
                android:layout_height="87dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/bungee_regular"
                android:paddingBottom="9dp"
                android:text="@string/creditos"
                android:textColor="#6F5D47"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonHistorial" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButtonVolver"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_square_background"
        android:contentDescription="@string/botonvolver"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButtonVolumen"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_square_background"
        android:contentDescription="@string/botonvolumen"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconovolumenencendido" />

</androidx.constraintlayout.widget.ConstraintLayout>
